# futaba2dat

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  adpt.wsgi  docker-compose.yml  futaba.py  futababoard.py  futabathread.py  pyproject.toml  pytest.ini  setup.cfg  top.tpl  uwsgi.ini
.github/workflows/: cicd.yml  claude.yml
futaba2dat/: boards.json  db.py  futaba.py  main.py  settings.py  transform.py
hello_web_application/: main.py
static/: index.css
templates/: bbsmenu.j2  board.j2  index.j2  log.j2  setting.j2  subject.j2  thread.j2
tests/: test_app.py  test_db_index.py  test_ftbucket.py  test_futaba.py  test_hello_web_application.py  test_integration.py  test_url_conversion.py  testcase_board1.html  testcase_thread1.html  testcase_thread2.html
tools/: make_boards.py
