[tool.poetry]
name = "hello-web-application"
version = "0.1.0"
description = ""
authors = ["Tomu Katsumata <katsumata-to@kadokawa.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
SQLAlchemy = "^1.4.11"
beautifulsoup4 = "^4.9.3"
pydantic = "^1.8.1"
requests = "^2.25.1"
sqlalchemy-stubs = "^0.4"
pymysql = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.4b1", allow-prereleases = true}
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
