[tool.poetry]
name = "futaba2dat"
version = "0.1.0"
description = ""
authors = ["Tomu Katsumata <katsumata-to@kadokawa.jp>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
Jinja2 = "^3.1.6"
aiofiles = "^24.1.0"
SQLAlchemy = "^1.4.11"
beautifulsoup4 = "^4.9.3"
pydantic = "^1.8.1"
requests = "^2.25.1"
httpx = "^0.28.1"
sqlalchemy-stubs = "^0.4"
pymysql = "^1.0.3"
pg8000 = "^1.29.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
ruff = "^0.11.12"
pytest-asyncio = ">=0.21,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["I"] 
