[project]
name = "futaba2dat"
version = "0.1.0"
description = ""
authors = [
    {name = "t106", email = "segmentation-fault@yandex.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "Jinja2>=3.1.6",
    "aiofiles>=24.1.0",
    "SQLAlchemy>=2.0.41",
    "beautifulsoup4>=4.9.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.8.2",
    "requests>=2.25.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.12",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["futaba2dat"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may be slow and require external dependencies)"
]
asyncio_mode = "auto"

[tool.ruff]
lint.select = ["I"]
